Add missing german PR

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -74,7 +74,7 @@ In our benchmarks, this reduced the size of the database by a factor of 10, and 
 
 > [!WARNING]
 > Enabling this feature will update all of your vectors to contain only `1`s or `-1`s, impacting the relevancy significantly.
-> 
+>
 > **You cannot revert this option once you enable it**. Before setting `binaryQuantized` to `true`, Meilisearch recommends testing it in a smaller or duplicate index in a development environment.
 
 Done by @irevoire in #4941.
@@ -113,7 +113,7 @@ POST /multi-search
 }
 ```
 
-The multi-search response will include a new field, `facetsByIndex` with facet data separated per index: 
+The multi-search response will include a new field, `facetsByIndex` with facet data separated per index:
 
 ```json5
 {
@@ -137,7 +137,7 @@ The multi-search response will include a new field, `facetsByIndex` with facet d
         }
       },
      …
-  }  
+  }
 }
 ```
 
@@ -182,7 +182,7 @@ The response includes two new fields, `facetDistribution` and `facetStarts`:
   "facetDistribution": {
     "title": {
       "Batman returns": 1
-      "Batman: the killing joke": 
+      "Batman: the killing joke":
     },
     "id": {
       "42": 1
@@ -232,6 +232,7 @@ Done by @Kerollmops in #4939.
 * Language support and [localizedAttributes settings](https://www.meilisearch.com/docs/reference/api/settings#localized-attributes) by @ManyTheFish in #4937
   * Add ISO-639-1 variants
   * Convert ISO-639-1 into ISO-639-3
+* Add a German language tokenizer by @luflow in meilisearch/charabia#303 and in #4945
 
 # Fixes 🐞
 
@@ -253,4 +254,4 @@ Done by @Kerollmops in #4939.
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearchg): @iornstein.
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Charabia](https://github.com/meilisearch/charabia): @luflow
