--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -49,7 +49,7 @@ v1.10:
 {% endfor %}
 ```
 
-Changes to document templates are backwards compatible. Embedders using the v1.10 document template will continue working as before The new default document template will only work newly created embedders.
+Embedders using the v1.10 document template will continue working as before. The new default document template will only work newly created embedders.
 
 ## Vector database indexing performance improvements
 
