--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -31,7 +31,7 @@ Done by @dureuill in #4906, #4920, #4892, and #4938.
 
 * The default model for OpenAI is now `text-embedding-3-small` instead of `text-embedding-ada-002`
 * This release introduces a new embedder option: `documentTemplateMaxBytes`. Meilisearch will truncate a document's template text when it goes over the specified limit
-* Fields in `documentTemplate` include a new `field.is_searchable` property. It is also possible to filter out document fields:
+* Fields in `documentTemplate` include a new `field.is_searchable` property. The default document template now filters out both empty fields and fields not in the searchable attributes list:
 
 v1.11:
 ```
