--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -239,6 +239,7 @@ Done by @Kerollmops in #4939.
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
 * Prometheus `/metrics` return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
 * Truncate values at the end of a list of facet values when the number of facet values is larger than `maxValuesPerFacet`. For example, setting `maxValuesPerFacet` to `2` could result in `["blue", "red", "yellow"]`, being truncated to `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuill in #4929
+* Improve the task cancellation when vectors are used. By @irevoire in https://github.com/meilisearch/meilisearch/pull/4971
 * Swedish support: the characters `å`, `ä`, `ö` are no longer normalized to `a` and `o`. By @ManyTheFish in #4945
 
 # Misc
