--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -233,6 +233,7 @@ Done by @Kerollmops in #4939.
   * Add ISO-639-1 variants
   * Convert ISO-639-1 into ISO-639-3
 * Add a German language tokenizer by @luflow in meilisearch/charabia#303 and in #4945
+* Improve Turkish language support by @tkhshtsh0917 in meilisearch/charabia#305 and in  #4957
 
 # Fixes 🐞
 
