Update changelogs following rc1

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -234,14 +234,16 @@ Done by @Kerollmops in #4939.
   * Convert ISO-639-1 into ISO-639-3
 * Add a German language tokenizer by @luflow in meilisearch/charabia#303 and in #4945
 * Improve Turkish language support by @tkhshtsh0917 in meilisearch/charabia#305 and in  #4957
+* Upgrade "batch failed" log to error level in #4955 by @dureuill.
 
 # Fixes 🐞
 
 * ⚠️ When using federated search, `query.facets` was silently ignored at the query level, but should not have been. It now returns the appropriate error. Use `federation.facetsByIndex` instead if you want facets to be applied during federated search.
 * Prometheus `/metrics` return the route pattern instead of the real route when returning the HTTP requests total by @irevoire in #4839
 * Truncate values at the end of a list of facet values when the number of facet values is larger than `maxValuesPerFacet`. For example, setting `maxValuesPerFacet` to `2` could result in `["blue", "red", "yellow"]`, being truncated to `["blue", "yellow"]` instead of ["blue", "red"]`. By @dureuill in #4929
-* Improve the task cancellation when vectors are used. By @irevoire in https://github.com/meilisearch/meilisearch/pull/4971
+* Improve the task cancellation when vectors are used, by @irevoire in #4971
 * Swedish support: the characters `å`, `ä`, `ö` are no longer normalized to `a` and `o`. By @ManyTheFish in #4945
+* Update rhai to fix an internal error when [updating documents with a function](https://github.com/orgs/meilisearch/discussions/762) (experimental) by @irevoire in #4960
 
 # Misc
 
@@ -253,7 +255,8 @@ Done by @Kerollmops in #4939.
   * Fix broken links in README by @iornstein in #4943
 * Misc
   * Allow Meilitool to upgrade from v1.9 to v1.10 without a dump in some conditions, by @dureuill in #4912
+  * Fix bench by adding embedder by @dureuill in #4954
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearchg): @iornstein.
-- [Charabia](https://github.com/meilisearch/charabia): @luflow
+- [Charabia](https://github.com/meilisearch/charabia): @luflow, @tkhshtsh0917.
