--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -199,9 +199,9 @@ The response includes two new fields, `facetDistribution` and `facetStarts`:
 
 Done by @dureuill in #4929.
 
-## Experimental — New `STARTS_WITH` filter operator
+## Experimental — New `STARTS WITH` filter operator
 
-Enable the experimental feature to use the `STARTS_WITH` filter operator:
+Enable the experimental feature to use the `STARTS WITH` filter operator:
 
 ```bash
 curl \
@@ -212,14 +212,14 @@ curl \
   }'
 ```
 
-Use the `STARTS_WITH` operator when filtering:
+Use the `STARTS WITH` operator when filtering:
 
 ```json5
 curl \
   -X POST http://localhost:7700/indexes/movies/search \
   -H 'Content-Type: application/json' \
   --data-binary '{
-    "filter": "hero STARTS_WITH spider"
+    "filter": "hero STARTS WITH spider"
   }'
 ```
 
