Add changes folowing rc2

--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -235,6 +235,7 @@ Done by @Kerollmops in #4939.
 * Add a German language tokenizer by @luflow in meilisearch/charabia#303 and in #4945
 * Improve Turkish language support by @tkhshtsh0917 in meilisearch/charabia#305 and in  #4957
 * Upgrade "batch failed" log to error level in #4955 by @dureuill.
+* Update the search UI: remove the forced capitalized fields, by @curquiza in #4993
 
 # Fixes 🐞
 
@@ -244,6 +245,9 @@ Done by @Kerollmops in #4939.
 * Improve the task cancellation when vectors are used, by @irevoire in #4971
 * Swedish support: the characters `å`, `ä`, `ö` are no longer normalized to `a` and `o`. By @ManyTheFish in #4945
 * Update rhai to fix an internal error when [updating documents with a function](https://github.com/orgs/meilisearch/discussions/762) (experimental) by @irevoire in #4960
+* Fix the bad experimental search queue size by @irevoire in #4992
+* Do not send empty edit document by function by @irevoire in #5001
+* Display vectors when no custom vectors were ever provided by @dureuill in #5008
 
 # Misc
 
