--- a/meilisearch-release-changelog/v1.11.0.md
+++ b/meilisearch-release-changelog/v1.11.0.md
@@ -260,6 +260,7 @@ Done by @Kerollmops in #4939.
 * Misc
   * Allow Meilitool to upgrade from v1.9 to v1.10 without a dump in some conditions, by @dureuill in #4912
   * Fix bench by adding embedder by @dureuill in #4954
+  * Revamp analytics by @irevoire in #5011
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearchg): @iornstein.
