--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -48,6 +48,7 @@ Done by @irevoire in #5060, #5070, #5080
 * Make matches consider phrases as a single `Match` by @flevi29 in #4928
 * Adds new metrics to prometheus by @PedroTurik in #5044
 * Add `indices` field to `_matchesPosition` to specify where in an array a match comes from, by @LukasKalbertodt in #5005
+* Breaking for users of the experimental `vectorStore` feature: The field distribution no longer contains `_vectors`. Its value used to be incorrect, and fixing it gives it a very uninteresting value, as all documents in an index with an embedder have a (potentially empty) `_vectors` field. Done as part of #4900
 
 # Fixes 🐞
 
