--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -74,4 +74,4 @@ Done by @irevoire in #5060, #5070, #5080
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @DerTimonius, @flevi29, @LukasKalbertodt, @PedroTurik, @wuast94
-- [Charabia](https://github.com/meilisearch/charabia): TBD
+- [Charabia](https://github.com/meilisearch/charabia): @dqkqd @tats-u
