--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -71,6 +71,8 @@ Done by @irevoire in #5060, #5070, #5080
   * Add image source label to Dockerfile by @wuast94 in #4990
   * Hide code complexity into a subfolder by @Kerollmops in #5016
   * Internal tool: implement offline upgrade from v1.10 to v1.11 by @irevoire in #5034
+  * Meilisearch is now able to retrieve Katakana words from a Hiragana query by @tats-u in https://github.com/meilisearch/charabia/pull/312
+  * Improve error handling when writing into LMDB by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5089
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @DerTimonius, @flevi29, @LukasKalbertodt, @PedroTurik, @wuast94
