--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -53,7 +53,10 @@ Done by @irevoire in #5060, #5070, #5080
 # Fixes 🐞
 
 * Return an appropriate error when primary keys is greater than 512 bytes, by @flevi29 in #4930
-
+* Numbers are now segmented the same way by the tokenizer by @dqkqd in https://github.com/meilisearch/charabia/pull/311
+* Fix pagination when embedding fails by @dureuill in https://github.com/meilisearch/meilisearch/pull/5063
+* Stop words are not ignored anymore in #4984 by @ManyTheFish 
+* Fix phrase search with attributesToSearchOn in #4974 by @ManyTheFish 
 # Misc
 
 * Dependencies updates
