--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -24,7 +24,32 @@ Done by @dureuill, @ManyTheFish, and @Kerollmops in #4900.
 
 ## TBD: Customize settings to improve indexing speed
 
-TBD
+Two new opt-out settings, working as the `proximityPrecision` one, have been added `facetSearch` and `prefixSearch`.
+The purpose of these new settings is to let the user deactivate some features to save indexing time.
+
+### `facetSearch` setting
+This setting activates or deactivates the [facet search feature](https://www.meilisearch.com/docs/learn/filtering_and_sorting/search_with_facet_filters#searching-facet-values) for all the filterable attributes of the index:
+#### PUT `/indexes/{index_uid}/settings/facet-search`
+Value: `true` or `false`
+
+Changing this setting activates or deactivates the facet search feature
+
+#### DELETE `/indexes/{index_uid}/settings/facet-search`
+Reset the `facetSearch` setting to its default value: `true`
+
+### `prefixSearch` setting
+This setting activates or deactivates the ability to search a word by prefix on an index:
+#### PUT `/indexes/{index_uid}/settings/prefix-search`
+Value: `"disabled"` or `"indexingTime"`
+
+- `"disabled"`: deactivate the prefix search completely
+> During a search, the word `hello` will not be retrieved anymore with the query `he`, the prefixes will not be processed during the indexing, saving time. 
+
+- `"indexingTime"`: Activate the processing of the prefixes (default Meilisearch behavior)
+
+#### DELETE `/indexes/{index_uid}/settings/prefix-search`
+Reset the `prefixSearch` setting to its default value: `"indexingTime"`
+
 
 ## More visibility around indexing tasks
 
