Update post rc1

--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -22,34 +22,44 @@ TBD: give more data and metrics about improvements
 
 Done by @dureuill, @ManyTheFish, and @Kerollmops in #4900.
 
-## TBD: Customize settings to improve indexing speed
+## Customize settings to improve indexing speed
 
 Two new opt-out settings, working as the `proximityPrecision` one, have been added `facetSearch` and `prefixSearch`.
+
 The purpose of these new settings is to let the user deactivate some features to save indexing time.
 
+Done by @ManyTheFish in #5091
+
 ### `facetSearch` setting
+
 This setting activates or deactivates the [facet search feature](https://www.meilisearch.com/docs/learn/filtering_and_sorting/search_with_facet_filters#searching-facet-values) for all the filterable attributes of the index:
-#### PUT `/indexes/{index_uid}/settings/facet-search`
-Value: `true` or `false`
 
-Changing this setting activates or deactivates the facet search feature
+```bash
+curl \
+  -X PUT 'http://localhost:7700/indexes/books/settings/facet-search' \
+  -H 'Content-Type: application/json' \
+  --data-binary 'true'
+```
 
-#### DELETE `/indexes/{index_uid}/settings/facet-search`
-Reset the `facetSearch` setting to its default value: `true`
+Default value is `true`.
 
 ### `prefixSearch` setting
+
 This setting activates or deactivates the ability to search a word by prefix on an index:
-#### PUT `/indexes/{index_uid}/settings/prefix-search`
-Value: `"disabled"` or `"indexingTime"`
+
+```bash
+curl \
+  -X PUT 'http://localhost:7700/indexes/books/settings/prefix-search' \
+  -H 'Content-Type: application/json' \
+  --data-binary 'disabled'
+```
+
+Possible values are:
 
 - `"disabled"`: deactivate the prefix search completely
-> During a search, the word `hello` will not be retrieved anymore with the query `he`, the prefixes will not be processed during the indexing, saving time. 
+- `"indexingTime"`: activate the processing of the prefixes (default Meilisearch behavior)
 
-- `"indexingTime"`: Activate the processing of the prefixes (default Meilisearch behavior)
-
-#### DELETE `/indexes/{index_uid}/settings/prefix-search`
-Reset the `prefixSearch` setting to its default value: `"indexingTime"`
-
+Disabling the prefix search implies that, during a search, the word `hello` will not be retrieved anymore with the query `he`. But the prefixes will not be processed during the indexing, saving time.
 
 ## More visibility around indexing tasks
 
@@ -80,14 +90,15 @@ Done by @irevoire in #5060, #5070, #5080
 * Return an appropriate error when primary keys is greater than 512 bytes, by @flevi29 in #4930
 * Numbers are now segmented the same way by the tokenizer by @dqkqd in https://github.com/meilisearch/charabia/pull/311
 * Fix pagination when embedding fails by @dureuill in https://github.com/meilisearch/meilisearch/pull/5063
-* Stop words are not ignored anymore in #4984 by @ManyTheFish 
-* Fix phrase search with attributesToSearchOn in #4974 by @ManyTheFish 
+* Stop words are not ignored anymore in #5062 by @ManyTheFish
+* Fix phrase search with `attributesToSearchOn` in #5062 by @ManyTheFish
 # Misc
 
 * Dependencies updates
   * Update benchmarks to match the new crates subfolder by @Kerollmops in #5021
   * Fix the benchmarks by @irevoire in #5037
   * Bump Swatinem/rust-cache from 2.7.1 to 2.7.5 in #5030
+  * Update charabia v0.9.2 by @ManyTheFish in #5098
 * CIs and tests
   * Improve performance of `delete_index.rs` by @DerTimonius in #4963
   * Improve performance of `create_index.rs` by @DerTimonius in #4962
