Apply suggestions from code review
Co-authored-by: gui machiavelli <hey@guimachiavelli.com>

--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.12 introduces huge improvements regarding indexing speed. The team worked hard to divise time to import huge datasets by two. You can also customize your settings to adapt your indexing needs and so, the indexing speed that fits your usage.
+Meilisearch v1.12 introduces significant indexing speed improvements, almost halving the time required to index large datasets. This release also introduces new settings to customize and potentially further increase indexing speed.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -22,17 +22,17 @@ TBD: give more data and metrics about improvements
 
 Done by @dureuill, @ManyTheFish, and @Kerollmops in #4900.
 
-## Customize settings to improve indexing speed
+## New index settings: use `facetSearch` and `prefixSearch` to improve indexing speed
 
-Two new opt-out settings, working as the `proximityPrecision` one, have been added `facetSearch` and `prefixSearch`.
+v1.12 introduces two new index settings: `facetSearch` and `prefixSearch`.
 
-The purpose of these new settings is to let the user deactivate some features to save indexing time.
+Both settings allow you to skip parts of the indexing process. This leads to significant improvements to indexing speed, but may negatively impact search experience in some use cases.
 
 Done by @ManyTheFish in #5091
 
-### `facetSearch` setting
+### `facetSearch`
 
-This setting activates or deactivates the [facet search feature](https://www.meilisearch.com/docs/learn/filtering_and_sorting/search_with_facet_filters#searching-facet-values) for all the filterable attributes of the index:
+Use this setting to toggle [facet search](https://www.meilisearch.com/docs/learn/filtering_and_sorting/search_with_facet_filters#searching-facet-values):
 
 ```bash
 curl \
@@ -41,11 +41,11 @@ curl \
   --data-binary 'true'
 ```
 
-Default value is `true`.
+The default value for `facetSearch` is `true`. When set to `false`, this setting disables facet search for all filterable attributes in an index.
 
-### `prefixSearch` setting
+### `prefixSearch`
 
-This setting activates or deactivates the ability to search a word by prefix on an index:
+Use this setting to configure the ability to [search a word by prefix](https://www.meilisearch.com/docs/learn/engine/prefix) on an index:
 
 ```bash
 curl \
@@ -54,43 +54,62 @@ curl \
   --data-binary 'disabled'
 ```
 
-Possible values are:
+`prefixSearch` accepts one of the following values:
 
-- `"disabled"`: deactivate the prefix search completely
-- `"indexingTime"`: activate the processing of the prefixes (default Meilisearch behavior)
+- `"indexingTime"`: enables prefix processing during indexing. This is the default Meilisearch behavior
+- `"disabled"`: deactivates prefix search completely
 
-Disabling the prefix search implies that, during a search, the word `hello` will not be retrieved anymore with the query `he`. But the prefixes will not be processed during the indexing, saving time.
 
-## More visibility around indexing tasks
+Disabling prefix search means the query `he` will no longer match the word `hello`. This may significantly impact search result relevancy, but speeds up the indexing process.
 
-In order to give more visibility around indexing processing around your `task`, especially when indexing big documents, new routes have been introduced:
-- `GET /batches/:uid`: returns a specific `batch` object
-- `GET /batches`: return a list of `batch` objects
+## New API route: `/batches`
 
-The same query parameters than `GET /tasks` route can be used to apply filtering.
+The new `/batches` endpoint allow you to query information about task batches.
 
-TBD: an example of batch object
+`GET` `/batches` returns a list of batch objects:
 
-Also, a new field is introduced in the task object: `batch`.
+```sh
+curl  -X GET 'http://localhost:7700/batches'
+```
 
-TBD: an example of the new `task` object, one `progress` in implemented.
+This endpoint accepts the same parameters as `GET` `/tasks` route, allowing you to narrow down which batches you want to see.
+
+You may also query `GET` `/batches/:uid` to retrieve information about a single batch object:
+
+```sh
+curl  -X GET 'http://localhost:7700/batches/BATCH_UID'
+```
+
+`/batches/:uid` does not accept any parameters.
+
+Batch objects contain the following fields:
+
+```json5
+// TBD: an example of batch object
+```
+
+Additionally, task objects now include a new field, `batchUid`. Use this field together with `/batches/:uid` to retrieve data on a specific batch.
+
+```json5
+// TBD: an example of the new `task` object, one `progress` in implemented.
+```
 
 Done by @irevoire in #5060, #5070, #5080
 
 ## Other improvements
 
-* Introduce the `reverse` query parameter for `GET /tasks` route set to `false` by default. If set to `true`, then the tasks will be returned in reversed order (the oldest first). Done by @irevoire in #5048.
-* Make matches consider phrases as a single `Match` by @flevi29 in #4928
+* New query parameter for `GET` `/tasks`: `reverse`. If `reverse` is set to `true`, tasks will be returned in reversed order, from oldest to newest tasks. Done by @irevoire in #5048
+* Phrase searches with`showMatchesPosition` set to `true` give a single location for the whole phrase @flevi29 in #4928
 * Adds new metrics to prometheus by @PedroTurik in #5044
-* Add `indices` field to `_matchesPosition` to specify where in an array a match comes from, by @LukasKalbertodt in #5005
-* ⚠️ Breaking for users of the experimental `vectorStore` feature: The field distribution no longer contains `_vectors`. Its value used to be incorrect, and fixing it gives it a very uninteresting value, as all documents in an index with an embedder have a (potentially empty) `_vectors` field. Done as part of #4900
+* When a query finds matching terms in document fields with array values,  Meilisearch now includes an `indices` field to `_matchesPosition` specifying which array elements contain the matches by @LukasKalbertodt in #5005
+* ⚠️ Breaking `vectorStore` change: field distribution no longer contains `_vectors`. Its value used to be incorrect, and there is no current use case for the fixed, most likely empty, value. Done as part of #4900
 
 # Fixes 🐞
 
-* Return an appropriate error when primary keys is greater than 512 bytes, by @flevi29 in #4930
-* Numbers are now segmented the same way by the tokenizer by @dqkqd in https://github.com/meilisearch/charabia/pull/311
+* Return appropriate error when primary key is greater than 512 bytes, by @flevi29 in #4930
+* Fix issue where numbers were segmented in different ways depending on tokenizer, by @dqkqd in https://github.com/meilisearch/charabia/pull/311
 * Fix pagination when embedding fails by @dureuill in https://github.com/meilisearch/meilisearch/pull/5063
-* Stop words are not ignored anymore in #5062 by @ManyTheFish
+* Fix issue causing Meilisearch to ignore stop words in some cases by @ManyTheFish in #5062
 * Fix phrase search with `attributesToSearchOn` in #5062 by @ManyTheFish
 # Misc
 
