--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -100,7 +100,7 @@ Done by @irevoire in #5060, #5070, #5080
 
 * New query parameter for `GET` `/tasks`: `reverse`. If `reverse` is set to `true`, tasks will be returned in reversed order, from oldest to newest tasks. Done by @irevoire in #5048
 * Phrase searches with`showMatchesPosition` set to `true` give a single location for the whole phrase @flevi29 in #4928
-* Adds new metrics to prometheus by @PedroTurik in #5044
+* New Prometheus metrics by @PedroTurik in #5044
 * When a query finds matching terms in document fields with array values,  Meilisearch now includes an `indices` field to `_matchesPosition` specifying which array elements contain the matches by @LukasKalbertodt in #5005
 * ⚠️ Breaking `vectorStore` change: field distribution no longer contains `_vectors`. Its value used to be incorrect, and there is no current use case for the fixed, most likely empty, value. Done as part of #4900
 
