--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -72,7 +72,7 @@ The new `/batches` endpoint allow you to query information about task batches.
 curl  -X GET 'http://localhost:7700/batches'
 ```
 
-This endpoint accepts the same parameters as `GET` `/tasks` route, allowing you to narrow down which batches you want to see.
+This endpoint accepts the same parameters as `GET` `/tasks` route, allowing you to narrow down which batches you want to see. Parameters used with `GET` `/batches` apply to the tasks, not the batches themselves. For example, `GET /batches?uid=0` returns batches containing tasks with a `taskUid` of `0` , not batches with a `batchUid` of `0`.
 
 You may also query `GET` `/batches/:uid` to retrieve information about a single batch object:
 
