Update changelogs following rc2

--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -134,6 +134,7 @@ Done by @irevoire in #5060, #5070, #5080
   * Fix the benchmarks by @irevoire in #5037
   * Bump Swatinem/rust-cache from 2.7.1 to 2.7.5 in #5030
   * Update charabia v0.9.2 by @ManyTheFish in #5098
+  * Update mini-dashboard to v0.2.16 version by @curquiza in #5102
 * CIs and tests
   * Improve performance of `delete_index.rs` by @DerTimonius in #4963
   * Improve performance of `create_index.rs` by @DerTimonius in #4962
