Apply suggestions from code review

--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -119,6 +119,7 @@ Done by @irevoire in #5060, #5070, #5080
 * New Prometheus metrics by @PedroTurik in #5044
 * When a query finds matching terms in document fields with array values,  Meilisearch now includes an `indices` field to `_matchesPosition` specifying which array elements contain the matches by @LukasKalbertodt in #5005
 * ⚠️ Breaking `vectorStore` change: field distribution no longer contains `_vectors`. Its value used to be incorrect, and there is no current use case for the fixed, most likely empty, value. Done as part of #4900
+* Improve error message by adding index name in #5056 by @airycanon
 
 # Fixes 🐞
 
@@ -150,5 +151,5 @@ Done by @irevoire in #5060, #5070, #5080
   * Improve error handling when writing into LMDB by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5089
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @DerTimonius, @flevi29, @LukasKalbertodt, @PedroTurik, @wuast94
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @airycanon, @DerTimonius, @flevi29, @LukasKalbertodt, @PedroTurik, @wuast94
 - [Charabia](https://github.com/meilisearch/charabia): @dqkqd @tats-u
