--- a/meilisearch-release-changelog/v1.12.0.md
+++ b/meilisearch-release-changelog/v1.12.0.md
@@ -16,9 +16,15 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Improve indexing speed
 
-Indexing time for huge dataset import (multiple millions of documents) is divided by two!
+Indexing time is improved across the board!
 
-TBD: give more data and metrics about improvements
+- Performance is maintained or better on smaller machines
+- On bigger machines with multiple cores and good IO, Meilisearch v1.12 is much faster than Meilisearch v1.11
+    - More than twice as fast for raw document insertion tasks.
+    - More than x4 as fast for incrementally updating documents in a large database.
+    - Embeddings generation was also improved up to x1.5 for some workloads.
+    
+The new indexer also makes task cancellation faster.
 
 Done by @dureuill, @ManyTheFish, and @Kerollmops in #4900.
 
