--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -4,9 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.13 introduces Vector Store Stabilization, Dumpless Upgrade, Improves the Indexing Speed by granularly selecting the filter features and Proxy Search Requests.
-
-TBD explain better and with more marketing sentences
+Meilisearch v1.13 introduces several significant improvements: our Vector Store feature is now fully stabilized for seamless hybrid search integration, dumpless version upgrades eliminate the need for reindexing during updates, granular filterable attribute settings allow for optimized indexing performance, and a new experimental feature enables distributed search queries across multiple Meilisearch instances to better balance network loads.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -18,9 +16,7 @@ Some SDKs might not include all new features. Consult the project repository for
 
 ## Stabilize Vector Store feature
 
-After being released in v1.3.0, we have now fully stabilized the Vector Store feature. The experimental feature no longer needs to be enabled, and the `vectorStore` field is no longer shown or accepted by the `/experimental-features` route.
-
-TBD explain better and with more marketing sentences
+After its initial release in v1.3.0, we have now fully stabilized the Vector Store feature. The experimental feature no longer requires manual activation, and the `vectorStore` field is no longer displayed or accepted by the `/experimental-features` route. This makes it even simpler to utilize our hybrid search capability, which delivers significantly better search relevance by combining traditional full text search with AI-powered semantic search.
 
 ### Breaking Changes before Stabilization
 
