Improve the introduction
Co-authored-by: Clémentine <clementine@meilisearch.com>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -4,7 +4,7 @@
 > [!WARNING]
 > Since this is a release candidate (RC), we do NOT recommend using it in a production environment. Is something not working as expected? We welcome [bug reports](https://github.com/meilisearch/meilisearch/issues/new/choose) and [feedback about new features](https://github.com/meilisearch/product/discussions).
 
-Meilisearch v1.13 introduces several significant improvements: our Vector Store feature is now fully stabilized for seamless hybrid search integration, dumpless version upgrades eliminate the need for reindexing during updates, granular filterable attribute settings allow for optimized indexing performance, and a new experimental feature enables distributed search queries across multiple Meilisearch instances to better balance network loads.
+Meilisearch v1.13 introduces several significant improvements, including stabilizing the Vector Store feature for seamless hybrid search integration! 🎉 This version also simplifies the Meilisearch upgrade process: you don't need a dump for migrating anymore! Finally, we introduced more granular filterable attribute settings to optimize your indexing performance.
 
 <!-- The following lines should NOT be put in the PRE-release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
