Explain dumpless upgrade
Co-authored-by: Tamo <irevoire@protonmail.ch>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -27,9 +27,19 @@ After its initial release in v1.3.0, we have now fully stabilized the Vector Sto
 
 Done by @dureuill in https://github.com/meilisearch/meilisearch/pull/5232 & https://github.com/meilisearch/meilisearch/pull/5234
 
-## Dumpless Upgrade: Ease upgrading to the next version without a dump
+## Experimental Dumpless Upgrade: Ease upgrading to the next version without a dump
 
-TBD by tamo
+From now on you can upgrade any database in the v1.12 version or more to the latest version without using a dump.
+That means it's an in-place, way faster upgrade process that consumes only the minimal amount of RAM or disk required.
+
+To upgrade your v1.12 database to v1.13 runs:
+```
+./meilisearch --experimental-dumpless-upgrade
+```
+
+Read more about it [here](https://github.com/orgs/meilisearch/discussions/804).
+
+Done by @irevoire and @dureuill in https://github.com/meilisearch/meilisearch/pull/5264
 
 ## Proxy search requests
 
