Document federated search
Co-authored-by: Louis Dureuil <louis@meilisearch.com>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -43,7 +43,118 @@ Done by @irevoire and @dureuill in https://github.com/meilisearch/meilisearch/pu
 
 ## Proxy search requests
 
-TBD by Louis
+You can now transparently federate search results from multiple Meilisearch instances.
+
+1. Enable the `proxy_search` experimental feature.
+2. Setup your network of multiple instances with a call to `PATCH /network`
+```json
+{
+  "remotes": {
+      "ms-0": {
+        "url": "http://ms-1235.example.meilisearch.io",
+        "searchApiKey": "Ecd1SDDi4pqdJD6qYLxD3y7VZAEb4d9j6LJgt4d6xas"
+      },
+      "ms-1": {
+	      "url": "http://ms-4242.example.meilisearch.io",
+	      "searchApiKey": "hrVu-OMcjPGElK7692K7bwriBoGyHXTMvB5NmZkMKqQ"
+	    }
+  },
+  "self": "ms-0"
+}
+```
+3. Create the same indexes with the same settings on all your Meilisearch instances.
+4. Send your documents to your instances, making sure to never send the same documents to different Meilisearch instances.
+5. Use the new `federationOptions.remote` search query parameter in your federated search on `POST /multi-search`
+```json
+{
+    "federation": {
+        "limit": 5
+    },
+    "queries": [
+        {
+            "q": "Batman returns dark",
+            "indexUid": "movies",
+            "federationOptions": {
+                "remote": "ms-0"
+            },
+            "attributesToRetrieve": [
+                "title"
+            ]
+        },
+        {
+            "q": "Batman returns dark",
+            "indexUid": "movies",
+            "federationOptions": {
+                "remote": "ms-1"
+            },
+            "attributesToRetrieve": [
+                "title"
+            ]
+        }
+    ]
+}
+```
+This yields the following results:
+```json
+{
+  "hits": [
+    {
+      "title": "Batman: The Dark Knight Returns, Part 1",
+      "_federation": {
+        "indexUid": "mieli",
+        "queriesPosition": 1,
+        "weightedRankingScore": 0.939452124935996,
+        "remote": "ms-1"
+      }
+    },
+    {
+      "title": "Batman: The Dark Knight Returns, Part 2",
+      "_federation": {
+        "indexUid": "mieli",
+        "queriesPosition": 1,
+        "weightedRankingScore": 0.939452124935996,
+        "remote": "ms-1"
+      }
+    },
+    {
+      "title": "Batman Beyond: Return of the Joker",
+      "_federation": {
+        "indexUid": "mieli",
+        "queriesPosition": 0,
+        "weightedRankingScore": 0.8660714285714286,
+        "remote": "ms-0"
+      }
+    },
+    {
+      "title": "Batman Returns",
+      "_federation": {
+        "indexUid": "mieli",
+        "queriesPosition": 0,
+        "weightedRankingScore": 0.6666666666666666,
+        "remote": "ms-0"
+      }
+    },
+    {
+      "title": "Batman: Return of the Caped Crusaders",
+      "_federation": {
+        "indexUid": "mieli",
+        "queriesPosition": 1,
+        "weightedRankingScore": 0.5798059964726632,
+        "remote": "ms-1"
+      }
+    }
+  ],
+  "processingTimeMs": 160,
+  "limit": 5,
+  "offset": 0,
+  "estimatedTotalHits": 64,
+  "remoteErrors": {}
+}
+```
+
+Using this new feature, you can split a large index across multiple Meilisearch instances.
+Find more information about this feature in the [public usage page](https://meilisearch.notion.site/API-usage-Remote-search-request-f64fae093abf409e9434c9b9c8fab6f3?pvs=74)
+
 
 ## Other improvements
 
