Add more Misc contributors
Co-authored-by: Clémentine <clementine@meilisearch.com>

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -178,6 +178,7 @@ Find more information about this feature in the [public usage page](https://meil
   * Fix the flaky batches test by @irevoire in https://github.com/meilisearch/meilisearch/pull/5175
   * Split tests for option crate meilisearch in a separate test file by @K-Kumar-01 in https://github.com/meilisearch/meilisearch/pull/5174
   * Remove hard coded task IDs to prevent flaky tests by @mhmoudr in https://github.com/meilisearch/meilisearch/pull/5182
+  * Improve test performance of get_index.rs by @DerTimonius in https://github.com/meilisearch/meilisearch/pull/5210
 * Misc
   * Guide people to create custom reports on the benchboard by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5029
   * Fix typo in a comment by @eltociear in https://github.com/meilisearch/meilisearch/pull/5184
@@ -186,7 +187,7 @@ Find more information about this feature in the [public usage page](https://meil
   * Refactor indexer by @dureuill in https://github.com/meilisearch/meilisearch/pull/5168
   * Auto-generate the OpenAPI spec by @irevoire in https://github.com/meilisearch/meilisearch/pull/4867 & https://github.com/meilisearch/meilisearch/pull/5231
   * Merge bitmaps by using `Extend::extend` by @Kerollmops in https://github.com/meilisearch/meilisearch/pull/5221
-  * Fix corrupted task queue errors on index creation by @irevoire in https://github.com/meilisearch/meilisearch/pull/5239
+  * Fix issue introduced by dumpless upgrade by @manojks1999 in https://github.com/meilisearch/meilisearch/pull/5284
 
 ❤️ Thanks again to our external contributors:
 - [Meilisearch](https://github.com/meilisearch/meilisearch): @takaebato, @Sherlouk, @jameshiew, @K-Kumar-01, @mhmoudr, @eltociear, @Gnosnay, @DerTimonius, @manojks1999
