Improve the english

--- a/meilisearch-release-changelog/v1.13.0.md
+++ b/meilisearch-release-changelog/v1.13.0.md
@@ -29,15 +29,15 @@ Done by @dureuill in https://github.com/meilisearch/meilisearch/pull/5232 & http
 
 ## Experimental Dumpless Upgrade: Ease upgrading to the next version without a dump
 
-From now on you can upgrade any database in the v1.12 version or more to the latest version without using a dump.
-That means it's an in-place, way faster upgrade process that consumes only the minimal amount of RAM or disk required.
+From now on you can upgrade any database in v1.12 or later to the latest version without using a dump.
+This means it's an in-place, faster upgrade process that consumes only the minimum amount of RAM or disk space required.
 
-To upgrade your v1.12 database to v1.13 runs:
+To upgrade your v1.12 database to v1.13 run:
 ```
 ./meilisearch --experimental-dumpless-upgrade
 ```
 
-Read more about it [here](https://github.com/orgs/meilisearch/discussions/804).
+Read more about it [on the dedicated product discussion](https://github.com/orgs/meilisearch/discussions/804).
 
 Done by @irevoire and @dureuill in https://github.com/meilisearch/meilisearch/pull/5264
 
